# small-personal-projects

./: .gitignore  README.md
Docker/: .env.example  docker-compose.yaml
Python/Flyordie/: pyproject.toml  requirements.txt
SwiftBarPlugins/: README.md
raspi/: .env.example  Caddyfile  docker-compose.yaml  setup.sh
raspi/docs/: cert.md  https.md
raspi/www/: qr.html  setup.html
