[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flyordie"
version = "0.1.0"
description = "Fly or Die - A web scraping and notification tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rodrigo", email = ""}
]
dependencies = [
    "beautifulsoup4>=4.11.2",
    "requests>=2.32.4",
    "pillow>=10.2.0",
    "termcolor>=2.2.0",
    "xmltodict>=0.13.0",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "mypy",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"
